--- a/info/cmd_install/index.html
+++ b/info/cmd_install/index.html
@@ -38,7 +38,7 @@
             </nav>
         </div>
     </section>
-    <div id="delimiter"></div>
+    <div class="general">
 
     <div class="content">
         <p class="section">Установка Командной строки</p>
