--- a/labs.html
+++ b/labs.html
@@ -37,9 +37,8 @@
             </nav>
         </div>
     </section>
-    <div id="delimiter"></div>
-
-    <div class="content" style="max-width: 100%; margin: 0 10%;">
+    
+    <div class="content central-page">
         <p class="section">Лабораторные работы по React.js</p>
         <div class="lr-block">
             <ol class="lr-list">
