--- a/info.html
+++ b/info.html
@@ -37,9 +37,8 @@
             </nav>
         </div>
     </section>
-    <div id="delimiter"></div>
-
-    <div class="content" style="max-width: 100%; margin: 0 10%;">
+    
+    <div class="content central-page">
         <p class="section">Справочник</p>
         <p>В данном разделе вы найдете вспомогательную информацию для написания лабораторных работ. Для вашего удобства весь материал разделен на категории.</p>
         <div class="lr-block">
