--- a/info/create_react_app/index.html
+++ b/info/create_react_app/index.html
@@ -38,7 +38,7 @@
             </nav>
         </div>
     </section>
-    <div id="delimiter"></div>
+    <div class="general">
 
     <div class="content">
         <p class="section">Создание React приложения (NPX, NPM, YARN)</p>
