--- a/theory.html
+++ b/theory.html
@@ -38,9 +38,8 @@
                 </nav>
             </div>
         </section>
-        <div id="delimiter"></div>
-
-        <div class="content" style="max-width: 100%; margin: 0 10%;">
+        
+        <div class="content central-page">
             <p class="section">Теория</p>
             <p class="section-title">Установка React</p>
             <ol class="lr-list">
