Ещё один фикс ссылки на 2 ЛР

--- a/labs/lab01/index.html
+++ b/labs/lab01/index.html
@@ -136,7 +136,7 @@
         <ul class="site-nav-list">
             <p class="site-nav-name">Раздел 1. Установка и введение в React</p>
             <li><a href="index.html">Лабораторная работа №1</a></li>
-            <li><a href=".../lab02/index.html">Лабораторная работа №2</a></li>
+            <li><a href="../lab02/index.html">Лабораторная работа №2</a></li>
             <li><a href="../lab03/index.html">Лабораторная работа №3</a></li>
             <li><a href="../lab04/index.html">Лабораторная работа №4</a></li>
             <li><a href="../lab05/index.html">Лабораторная работа №5</a></li>
