Лабораторная работа №3 + исправления
Задания 1-2 лабораторной работы №3 + исправления слов в названиях лабораторных.

--- a/labs/lab03/index.html
+++ b/labs/lab03/index.html
@@ -49,8 +49,18 @@
     <div class="general">
 
     <div class="content">
-    <p class="section">Лабаратоная работа №3</p>
-    
+    <p class="section">Лабораторная работа №3</p>
+    <p class="section">Задание 1</p>
+    <p>Создайте компонент <mark>Phone</mark> для ввода номера телефона. Реализовать следующий функционал: возможность выбора страны и сотового оператора для ввода номера телефона по маске страны и оператору; количество символов в маске номера телефона должно меняться в зависимости от выбранной страны; реализовать валидацию номера телефона (ввод только цифр, количество символов, удаление лишних элементов, предупреждение о неверно введенных данных). Выбор страны и оператора может быть реализован в отдельных полях.</p>
+    <p>Реализовать вывод полного номера телефона (с кодом страны и оператора) в уведомление браузера (alert).</p>
+    <p>Пример реализации выбора страны:</p>
+    <img src="img/demo_phone1.png" alt="Пример выбора страны">
+    <img src="img/demo_phone2.png" alt="Пример списка для выбора страны">
+    <p class="section">Задание 2</p>
+    <p>Реализуйте компонент таблицы <mark>sort_table</mark> с возможностью сортировки на примере каталога товаров. Таблица должна содержать следующие значения: номер строки, название товара, цена, количество. Добавить возможность сортировки по каждому значению, сортировка должна происходить как по возрастанию, так и по убыванию. Сортировка по названию в алфавитном прямом и обратном порядках.</p>
+    <p>Нумерация должна оставаться правильной при любом типе сортировки. При количестве товаров менее трех выделять их желтым цветом, при отсутствии товара (количество равное нулю) выделять красным цветом.</p>
+    <p>Пример реализации таблицы: </p>
+    <img src="img/table_sort.png" alt="Пример таблицы с сортировкой">
     </div>
     <div class="site-nav">
     <div class="site-nav-scroll">
