--- a/labs/lab05/index.html
+++ b/labs/lab05/index.html
@@ -49,7 +49,7 @@
     <div class="general">
 
     <div class="content">
-    <p class="section">Лабаратоная работа №5</p>
+    <p class="section">Лабораторная работа №5</p>
 
     </div>
 <div class="site-nav">
