--- a/labs/lab02/index.html
+++ b/labs/lab02/index.html
@@ -48,7 +48,7 @@
 
     <div class="content">
         <p class="section">Лабораторная работа №2</p>
-        <div class="section">Задание 1</div>
+        <p class="section">Задание 1</p>
 
         <p>Создайте компонент-класс <mark>Clock</mark>, показывающий текущее время. У компонента должна быть возможность указать атрибуты <mark>format</mark> (12 или 24 часа, по умолчанию — 24) и <mark>timezone</mark> (часовой пояс, по умолчанию — часовой пояс пользователя). Например, код <mark>&lt;Clock format='24' timezone='+3:00' /></mark> должен создать часы, которые показывают минское время в 24-часовом формате, а код <mark>&lt;Clock format='12' timezone='-5:00' /></mark> — часы, которые показывают нью-йоркское время в 12-часовом формате.</p>
         <p>Учтите, что не во всех часовых поясах время отличается от гринвичского на целое количество часов. Например, Индия использует время UTC+5:30.</p>
