--- a/labs/lab09/index.html
+++ b/labs/lab09/index.html
@@ -49,7 +49,7 @@
     <div class="general">
 
     <div class="content">
-    <p class="section">Лабаратоная работа №9</p>
+    <p class="section">Лабораторная работа №9</p>
 
     </div>
     <div class="site-nav">
