--- a/labs/lab15/index.html
+++ b/labs/lab15/index.html
@@ -49,7 +49,7 @@
     <div class="general">
 
     <div class="content">
-    <p class="section">Лабаратоная работа №15</p>
+    <p class="section">Лабораторная работа №15</p>
 
     </div>
     <div class="site-nav">
