--- a/labs/lab04/index.html
+++ b/labs/lab04/index.html
@@ -51,6 +51,10 @@
     <div class="content">
     <p class="section">Лабораторная работа №4</p>
 
+    <p class="section">Задание 1</p>
+    <p>Создайте компонент <mark>Calendar</mark>, включающий в себя компоненты <mark>CalendarHead</mark> и <mark>CalendarBody</mark>. Он должен отрисовывать календарь c функциональными кнопками перехода к следующему и предыдущему месяцам. Сегодняшний день и дни, попавшие в выборку, но не относящиеся к выбранному месяцу, выделите цветом. Результат может выглядеть так:</p>
+    <img src="img/calendar.jpg" alt="Пример реализации календаря">
+
     </div>
     <div class="site-nav">
     <div class="site-nav-scroll">
