--- a/labs/lab03/index.html
+++ b/labs/lab03/index.html
@@ -51,7 +51,7 @@
     <div class="content">
     <p class="section">Лабораторная работа №3</p>
     <p class="section">Задание 1</p>
-    <p>Создайте компонент <mark>PhoneInput</mark>. Компонент должен позволять ввести номер телефона в международном формате и при помощи радиокнопок выбрать одного из мобильных операторов страны, чей номер введён. Страна может быть определена как автоматически — по введённому пользователем коду, — так и пользователем вручную при помощи списка. Реализовать автоматическое форматирование номера телефона, то есть приведение его к виду <mark>+XXX&nbsp;(XX)&nbsp;XXX-XX-XX</mark>.
+    <p>Создайте компонент <mark>PhoneInput</mark>. Компонент должен позволять ввести номер телефона в международном формате и при помощи радиокнопок выбрать одного из мобильных операторов страны, чей номер введён. Страна может быть определена как автоматически — по введённому пользователем коду, — так и пользователем вручную при помощи списка. Реализуйте автоматическое форматирование номера телефона, то есть приведение его к виду <mark>+XXX&nbsp;(XX)&nbsp;XXX-XX-XX</mark>.
     <p>Пример реализации выбора страны:</p>
     <img src="img/demo_phone1.png" alt="Пример выбора страны">
     <img src="img/demo_phone2.png" alt="Пример списка для выбора страны">
