Подключение всех шрифтов локально  (offline link)
Подключение шрифтов страниц через локальные файлы

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" type="text/css" href="libraries/background/style.css">
     <link rel="stylesheet" type="text/css" href="css/chapters.css">
     <link rel="stylesheet" type="text/css" href="css/menu.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <style>@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");</style>
 </head>
 
 <body>
