Обучение Git - Методичка по Github
Отдельное методическое пособие по Git.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img src="images/menu/labs.png">
                 <p>ЛАБОРАТОРНЫЕ РАБОТЫ</p>
             </div>
-            <div class="element" onclick="react_1()">
+            <!--<div class="element" onclick="react_1()">
                 <img src="images/menu/react.png">
                 <p>РАЗДЕЛ 1</p>
                 <p>[ВВЕДЕНИЕ В REACT.JS]</p>
@@ -36,7 +36,7 @@
                 <img src="images/menu/react.png">
                 <p>РАЗДЕЛ 3</p>
                 <p>[REDUX.JS]</p>
-            </div>
+            </div>-->
             <div class="element" onclick="window.location.href = 'theory.html'">
                 <img src="images/menu/theory.png">
                 <p>ТЕОРИЯ</p>
@@ -44,6 +44,10 @@
             <div class="element" onclick="window.location.href = 'info.html'">
                 <img src="images/menu/guide.png">
                 <p>СПРАВОЧНИК</p>
+            </div>
+            <div class="element" onclick="window.location.href = 'githowto/ru.htm'">
+                <img src="images/menu/github.png">
+                <p>Обучение Git</p>
             </div>
         </div>
 
