--- a/labs/lab05/index.html
+++ b/labs/lab05/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ЛАБОРАТОРНЫЕ РАБОТЫ &#124; REACT.JS</title>
@@ -16,7 +15,6 @@
     <!--jQuery-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="../../libraries/header.js"></script>
-</head>
 </head>
 
 <body>
@@ -50,6 +48,10 @@
 
     <div class="content">
     <p class="section">Лабораторная работа №5</p>
+    
+    <p class="section">Задание 1</p>
+
+    <p>Добавьте в компонент <mark>Calendar</mark>, созданный в предыдущей лабораторной работе, возможность выбирать дни при помощи клика мыши. Выбранные пользователем дни храните в <mark>Calendar</mark>. Выделите выбранные дни цветом.</p>
 
     </div>
 <div class="site-nav">
