Обновление ссылок в содержании
Обновление ссылок на главной странице теории

--- a/theory.html
+++ b/theory.html
@@ -94,11 +94,10 @@
                 <li><a href="examples/reference/react-dom-server/index.html">ReactDOMServer</a></li>
                 <li><a href="examples/reference/dom-elements/index.html">Элементы DOM</a></li>
                 <li><a href="examples/reference/synthetic-event/index.html">SyntheticEvent</a></li>
-                <li><a href="#">Утилиты тестирования</a></li>
-                <li><a href="#">Поверхностный рендеринг</a></li>
-                <li><a href="#">Тестовый отрисовщик</a></li>
-                <li><a href="#">Требования к среде JavaScript</a></li>
-                <li><a href="#">Словарь</a></li>
+                <li><a href="examples/reference/test-utils/index.html">Утилиты тестирования</a></li>
+                <li><a href="examples/reference/test-renderer/index.html">Поверхностный рендеринг</a></li>
+                <li><a href="examples/reference/javascript-environment-requirements/index.html">Требования к среде JavaScript</a></li>
+                <li><a href="examples/reference/glossary/index.html">Словарь</a></li>
             </ol>
 
             <p class="section-title">Redux.js</p>
