--- a/info.html
+++ b/info.html
@@ -42,7 +42,7 @@
         <p class="section">Справочник</p>
         <p>В данном разделе вы найдете вспомогательную информацию для написания лабораторных работ. Для вашего удобства весь материал разделен на категории.</p>
         <div class="lr-block">
-           <p class="section-title">Начало работы с React.js, Node.js</p>
+           <p class="section-title-left">Начало работы с React.js, Node.js</p>
             <ol class="lr-list">
             <li><a href="info/cmd_install/index.html">Установка Командной строки</a></li>
             <li><a href="info/node_js_install/index.html">Установка Node.js</a></li>
