--- a/info/cmd_install/index.html
+++ b/info/cmd_install/index.html
@@ -43,7 +43,7 @@
     <div class="content">
         <p class="section">Установка Командной строки</p>
         <p>В операционной системе Microsoft Windows есть предустановленный терминал, который называется cmd.exe. Использовать его в качестве основного терминала не рекомендуется, так как его возможности не так широки, как у аналогов. Для стандартного терминала Windows существует две альтернативы в виде эмуляторов консоли под названием cmder и Windows Terminal.</p>
-        <p class="section-title">О эмуляторах</p>
+        <p class="section-title-left">О эмуляторах</p>
         <p><b>Windows Terminal</b> — приложение Терминал от Microsoft. Предлагает вкладочный интерфейс и объединяет инструменты Командная строка (CMD), PowerShell, Azure Cloud Shell и Подсистема Windows для Linux (WSL)</p>
         <img src="win_terminal.png" alt="Windows Terminal">
         <p><b>Cmder</b> — это эмулятор консоли, который отличается простотой и удобством работы. В отличие от стандартной командной строки cmd в Windows, данная программа предоставляет больше функционала, а ее интерфейс удобнее и привлекательнее. По сути, Cmder — это целый программный пакет, который включает командную строку, консоль, макрос и DosBox.</p>
