--- a/info/create_react_app/index.html
+++ b/info/create_react_app/index.html
@@ -42,10 +42,10 @@
 
     <div class="content">
         <p class="section">Создание React приложения (NPX, NPM, YARN)</p>
-        <p class="section-title">Create React App</p>
+        <p class="section-title-left">Create React App</p>
         <p>Пример <a target="_blank" href="https://github.com/facebook/create-react-app"><b>Create React App</b></a>&nbsp;— это лучший способ начать разработку нового одностраничного приложения React. Он настраивает вашу среду разработки, чтобы вы могли использовать новейшие функции JavaScript, предоставляет хороший опыт разработки и оптимизирует ваше приложение для продакшен. Вам понадобится Node >= 6 на вашем компьютере.</p>
         <p>Создавайте приложения React без конфигурации сборки. Приложение Create React работает на MacOS, Windows и Linux. Если что-то не работает или есть вопросы и нужна помощь, обращайтесь в сообщество Spectrum по адресу — <a target="_blank" href="//spectrum.chat/create-react-app">spectrum.chat/create-react-app</a>.</p>
-        <p class="section-title">Краткий обзор</p>
+        <p class="section-title-left">Краткий обзор</p>
         <p>Если вы ранее устанавливали create-Reaction-app глобально с помощью npm install -g create-Reaction-app, мы рекомендуем вам удалить пакет с помощью npm uninstall -g create-Reaction-app, чтобы npx всегда использовал последнюю версию.</p>
         <div class="note note-info">(NPX поставляется с NPM 5.2+ и выше, см. инструкции для более старых версий npm)</div>
         <pre class="line-numbers">
@@ -55,7 +55,7 @@
         <p>Затем откройте http://localhost:3000/, чтобы увидеть ваше приложение. Когда вы будете готовы к развертыванию в рабочей среде, создайте минимизированный пакет с помощью npm run build.</p>
         <img class="lazy-loaded" style="max-width: 100%;" src="https://camo.githubusercontent.com/e4f2feecb8bc0d58c1f2e31f97b2856a04b50ef3/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f66616365626f6f6b2f6372656174652d72656163742d61707040323762343261633765666130313866323534313135336162333064363331383066356661333965302f73637265656e636173742e737667" data-lazy-type="image" data-src="https://camo.githubusercontent.com/e4f2feecb8bc0d58c1f2e31f97b2856a04b50ef3/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f66616365626f6f6b2f6372656174652d72656163742d61707040323762343261633765666130313866323534313135336162333064363331383066356661333965302f73637265656e636173742e737667" alt="npm запуск" width="600" data-canonical-src="https://cdn.jsdelivr.net/gh/facebook/create-react-app@27b42ac7efa018f2541153ab30d63180f5fa39e0/screencast.svg">
         <p>Вам не нужно устанавливать или настраивать такие инструменты, как веб-пакет или Babel. Они предварительно настроены и скрыты, так что вы можете сосредоточиться только на коде.</p>
-        <p class="section-title">Создание приложения</p>
+        <p class="section-title-left">Создание приложения</p>
         <p>Вам понадобится Node 8.16.0 или Node 10.16.0 или более поздняя версия на локальном компьютере. Вы можете использовать nvm (macOS / Linux) или nvm-windows для переключения версий Node между различными проектами.</p>
         <p><a target="_blank" href="../node_js_install/index.html"><b>Как установить Node.js на ваше стройство</b></a></p>
         <p>Чтобы создать новое приложение, вы можете выбрать один из следующих методов:</p>
@@ -85,7 +85,7 @@
         <p class="section-title-left">npm run build или yarn build</p>
         <p>Создает приложение для производства в папке сборки. Он корректно объединяет React в производственном режиме и оптимизирует сборку для лучшей производительности.</p>
         <p>Сборка сводится к минимуму, а имена файлов содержат хэши. Ваше приложение готово к развертыванию.</p>
-        <p class="section-title">Что входит в Create React App?
+        <p class="section-title-left">Что входит в Create React App?
         <p>В вашей среде будет все необходимое для создания современного одностраничного приложения React:</p>
         <ul class="th-list-item">
             <li>Поддержка синтаксиса React, JSX, ES6, TypeScript и Flow.</li>
