--- a/labs.html
+++ b/labs.html
@@ -42,24 +42,19 @@
         <p class="section">Лабораторные работы по React.js</p>
         <div class="lr-block">
             <ol class="lr-list">
-                <!-- TODO: в релизе вырезать -->
-                <p class="section-title">Раздел 0. Банк заданий</p>
-                <li><a href="labs/task-bank.html">Банк заданий</a></li>
-            </ol>
-            <ol class="lr-list">
-                <p class="section-title">Раздел 1. Установка и введение в React</p>
+                <p class="section-title-left">Раздел 1. Установка и введение в React</p>
                 <li><a href="labs/lab01/index.html">Лабораторная  работа. Тема.</a></li>
                 <li><a href="labs/lab02/index.html">Лабораторная  работа. Тема.</a></li>
                 <li><a href="labs/lab03/index.html">Лабораторная  работа. Тема.</a></li>
                 <li><a href="labs/lab04/index.html">Лабораторная  работа. Тема.</a></li>
                 <li><a href="labs/lab05/index.html">Лабораторная  работа. Тема.</a></li>
-                <p class="section-title">Раздел 2. Основы React</p>
+                <p class="section-title-left">Раздел 2. Основы React</p>
                 <li><a href="labs/lab06/index.html">Лабораторная  работа. Тема.</a></li>
                 <li><a href="labs/lab07/index.html">Лабораторная  работа. Тема.</a></li>
                 <li><a href="labs/lab08/index.html">Лабораторная  работа. Тема.</a></li>
                 <li><a href="labs/lab09/index.html">Лабораторная  работа. Тема.</a></li>
                 <li><a href="labs/lab10/index.html">Лабораторная  работа. Тема.</a></li>
-                <p class="section-title">Раздел 3. Redux.js</p>
+                <p class="section-title-left">Раздел 3. Redux.js</p>
                 <li><a href="labs/lab11/index.html">Лабораторная  работа. Тема.</a></li>
                 <li><a href="labs/lab12/index.html">Лабораторная  работа. Тема.</a></li>
                 <li><a href="labs/lab13/index.html">Лабораторная  работа. Тема.</a></li>
