--- a/theory.html
+++ b/theory.html
@@ -41,14 +41,14 @@
         
         <div class="content central-page">
             <p class="section">Теория</p>
-            <p class="section-title">Установка React</p>
+            <p class="section-title-left">Установка React</p>
             <ol class="lr-list">
                 <li><a href="examples/installation/try-react/index.html">Начало работы с React</a></li>
                 <li><a href="examples/installation/new-app/index.html">Внедряем React в новое приложение</a></li>
                 <li><a href="examples/installation/add-to-app/index.html">Внедряем React в уже существующее приложение</a></li>
                 <li><a href="examples/installation/cdn-links/index.html">CDN ссылки</a></li>
             </ol>
-            <p class="section-title">Основы</p>
+            <p class="section-title-left">Основы</p>
             <ol class="lr-list">
                 <li><a href="examples/quick-start/hello-world/index.html">Hello, world!</a></li>
                 <li><a href="examples/quick-start/introducing-jsx/index.html">Введение в JSX</a></li>
@@ -64,7 +64,7 @@
                 <li><a href="examples/quick-start/thinking-in-react/index.html">Мышление в React</a></li>
             </ol>
 
-            <p class="section-title">Продвинутый React.js</p>
+            <p class="section-title-left">Продвинутый React.js</p>
             <ol class="lr-list">
                 <li><a href="examples/advanced/jsx-in-depth/index.html">JSX подробнее</a></li>
                 <li><a href="examples/advanced/typechecking-with-proptypes/index.html">Проверка типов с помощью PropTypes</a></li>
@@ -86,7 +86,7 @@
                 <li><a href="examples/advanced/strict-mode/index.html">Строгий режим</a></li>
             </ol>
 
-            <p class="section-title">Справочник</p>
+            <p class="section-title-left">Справочник</p>
             <ol class="lr-list">
                 <li><a href="examples/reference/react-api/index.html">React</a></li>
                 <li><a href="examples/reference/react-component/index.html">React.Component</a></li>
@@ -100,7 +100,7 @@
                 <li><a href="examples/reference/glossary/index.html">Словарь</a></li>
             </ol>
 
-            <p class="section-title">Redux.js</p>
+            <p class="section-title-left">Redux.js</p>
             <ol class="lr-list">
                 <li><a href="examples/redux/about-redux/index.html">О Redux</a></li>
                 <li><a href="examples/redux/install/index.html">Установка</a></li>
