ЛР №6 + Темы для ЛР + Перенос задания из 5 ЛР в 4 ЛР

--- a/labs/lab01/index.html
+++ b/labs/lab01/index.html
@@ -48,6 +48,7 @@
 
     <div class="content">
     <p class="section">Лабораторная работа №1</p>
+       <p class="lr-theme">Темы: <a target="_blank" href="../../examples/quick-start/hello-world/index.html">Hello, world!</a>, <a target="_blank" href="../../examples/quick-start/introducing-jsx/index.html">Введение в JSX</a>, <a target="_blank" href="../../examples/quick-start/rendering-elements/index.html">Создание элементов</a></p>
         <p class="section">Задание 1</p>
         
         <p>Выберите и, при необходимости, установите рабочее окружение для разработки с React. В первых лабораторных работах для этого можно использовать любой текстовый редактор. В дальнейшем вам понадобится Node.JS.</p>
